use porter as user and group in container

--- a/src/main/porter/Dockerfile
+++ b/src/main/porter/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:17-alpine
 
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
+RUN addgroup -S porter && adduser -S porter -G porter
+USER porter:porter
 
 ARG JAR_FILE=*.jar
 COPY ${JAR_FILE} app.jar
